Refactor index html for enhanced browser interface.html
Updated HTML structure and styles for the virtual browser, including a new top bar and iframe container for improved navigation and search functionality.

--- a/index.html
+++ b/index.html
@@ -1,288 +1,77 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Virtual Browser — Search Fix</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Virtual Browser – Embedded iFrame Version</title>
     <style>
-        *{box-sizing:border-box}
-        body{margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;display:flex;justify-content:center;align-items:center;padding:20px}
-        .browser-window{width:100%;max-width:1400px;height:85vh;background:#fff;border-radius:12px;box-shadow:0 20px 60px rgba(0,0,0,.3);display:flex;flex-direction:column;overflow:hidden}
-        .browser-toolbar{padding:12px 16px;border-bottom:1px solid #e0e0e0;display:flex;gap:12px;align-items:center;background:white}
-        .nav-buttons{display:flex;gap:8px}
-        .nav-btn{width:36px;height:36px;border:1px solid #ddd;background:white;border-radius:8px;cursor:pointer;display:flex;align-items:center;justify-content:center}
-        .nav-btn:disabled{opacity:.4;cursor:not-allowed}
-        .address-bar{flex:1;padding:8px 14px;border-radius:20px;border:1px solid #ddd;font-size:14px;outline:none}
-        .go-btn{padding:8px 18px;border-radius:20px;border:none;background:#667eea;color:white;cursor:pointer}
-        .browser-content{flex:1;position:relative;background:white}
-        .page{position:absolute;inset:0;display:none}
-        .page.active{display:block}
-        .loading{position:absolute;left:0;right:0;top:0;height:3px;background:#667eea;z-index:10;animation:loading 1.5s ease-in-out infinite}
-        @keyframes loading{0%,100%{transform:translateX(-100%)}50%{transform:translateX(100%)}}
-        .home{display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;padding:24px}
-        .error{display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;padding:24px;text-align:center}
-        iframe.content-frame{width:100%;height:100%;border:0}
+        body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
+        .topbar { background:#222; padding:10px; display:flex; gap:10px; }
+        input { flex:1; padding:8px; border-radius:6px; border:none; }
+        button { padding:8px 14px; border:none; border-radius:6px; background:#4a90e2; color:white; cursor:pointer; }
+        .samples { padding:12px; display:flex; gap:8px; background:#fff; }
+        .iframe-container { width:100%; height:80vh; margin-top:10px; border:1px solid #ccc; border-radius:6px; overflow:hidden; }
+        iframe { width:100%; height:100%; border:none; }
     </style>
 </head>
 <body>
-    <div class="browser-window">
-        <div class="browser-toolbar">
-            <div class="nav-buttons">
-                <button class="nav-btn" id="backBtn" onclick="goBack()" disabled>◀</button>
-                <button class="nav-btn" id="forwardBtn" onclick="goForward()" disabled>▶</button>
-                <button class="nav-btn" onclick="refresh()">↻</button>
-                <button class="nav-btn" onclick="goHome()">🏠</button>
-            </div>
-            <input id="addressBar" class="address-bar" placeholder="Sök eller skriv URL (t.ex. example.com eller \"borrelia behandling\")" onkeydown="if(event.key==='Enter'){goToAddress()}">
-            <button class="go-btn" onclick="goToAddress()">Gå</button>
-        </div>
 
-        <div class="browser-content">
-            <div class="page active" id="homePage">
-                <div class="home" style="gap:16px">
-                    <h1 style="margin:0">🌐 Virtual Browser</h1>
-                    <p style="color:#444;max-width:800px">Skriv en webbadress eller en sökfråga i adressfältet. Om sidan blockerar inbäddning öppnas den i en ny flik via felsidan.</p>
-                </div>
-            </div>
+<div class="topbar">
+    <input id="urlInput" placeholder="Ange webbadress eller sök...">
+    <button onclick="navigate()">Go</button>
+    <button onclick="search()">Sök</button>
+</div>
 
-            <div class="page" id="iframePage">
-                <div id="loadingBar" class="loading" style="display:none"></div>
-                <iframe id="contentFrame" class="content-frame"></iframe>
-            </div>
+<div class="samples">
+    <button onclick="openTest('example.com')">example.com</button>
+    <button onclick="openTest('wikipedia.org')">wikipedia.org</button>
+    <button onclick="openTest('borrelia behandling')">Sök borrelia</button>
+</div>
 
-            <div class="page" id="errorPage">
-                <div class="error">
-                    <h2>⚠️ Kunde inte ladda sidan</h2>
-                    <p id="errorText"></p>
-                    <div style="margin-top:12px">
-                        <button class="go-btn" onclick="openInNewTab()">Öppna i ny flik</button>
-                        <button class="go-btn" style="background:#999;margin-left:8px" onclick="goHome()">Till startsidan</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="iframe-container">
+    <iframe id="contentFrame" src=""></iframe>
+</div>
 
 <script>
-/* --- State --- */
-let historyList = ['home'];
-let historyIndex = 0;
-let currentUrl = 'home';
-
-const addressBar = document.getElementById('addressBar');
-const contentFrame = document.getElementById('contentFrame');
-const loadingBar = document.getElementById('loadingBar');
-const homePage = document.getElementById('homePage');
-const iframePage = document.getElementById('iframePage');
-const errorPage = document.getElementById('errorPage');
-const errorText = document.getElementById('errorText');
-const backBtn = document.getElementById('backBtn');
-const forwardBtn = document.getElementById('forwardBtn');
-
-function showPage(el){
-    homePage.classList.remove('active');
-    iframePage.classList.remove('active');
-    errorPage.classList.remove('active');
-    el.classList.add('active');
-}
-
-/* Normalkontroll om användartext är URL eller sök */
-function looksLikeSearch(input){
-    const trimmed = input.trim();
-    if(!trimmed) return false;
-    // Om innehåller mellanslag -> sök
-    if(/\s+/.test(trimmed)) return true;
-    // Om inte innehåller punkt (.) -> sannolikt sök
-    if(!trimmed.includes('.')) return true;
-    // Om börjar med ord (inga protokoll) men innehåller spaces? handled above
-    return false;
-}
-
-function normalizeUrl(input){
-    let url = input.trim();
-    // Om är sökterm så returnera null (hanteras av goToAddress)
-    if(looksLikeSearch(url)) return null;
-    // Lägg på https:// om det fattas
-    if(!/^https?:\/\//i.test(url)){
-        url = 'https://' + url;
-    }
+function fixURL(url){
+    url = url.trim();
+    if(!/^https?:\/\//i.test(url)) return 'https://' + url;
     return url;
 }
 
-function openInNewTab(){
-    if(currentUrl && currentUrl !== 'home'){
-        window.open(currentUrl, '_blank');
-    }
-}
-
-/* Ladda URL och hantera iframe-laddning.
-   pushHistory = true betyder: lägg till i historiken (normalt via adressfältet).
-*/
-function loadUrl(url, pushHistory = false){
-    if(!url || url === 'home'){
-        goHome();
-        return;
-    }
-
-    const normalized = normalizeUrl(url) || url; // normalizeUrl returnerar null för söktermer; men här url alltid en riktig URL
-    currentUrl = normalized;
-    addressBar.value = normalized;
-
-    // Visa loading
-    loadingBar.style.display = 'block';
-    showPage(iframePage);
-
-    // Ladda i iframe
-    contentFrame.src = normalized;
-
-    let loaded = false;
-    const t = setTimeout(()=>{
-        if(!loaded){
-            // troligt att sidan blockerar inbäddning eller timeout
-            showError(normalized, 'Sidan laddades inte i iframe (kan blockera inbäddning eller svara långsamt).');
-        }
-    },5000);
-
-    contentFrame.onload = () => {
-        loaded = true;
-        clearTimeout(t);
-        loadingBar.style.display = 'none';
-    };
-    contentFrame.onerror = () => {
-        loaded = true;
-        clearTimeout(t);
-        showError(normalized, 'Ett fel uppstod vid laddning i iframe.');
-    };
-
-    // Hantera historik (spara normaliserad url)
-    if(pushHistory){
-        const normalizedForHistory = normalized;
-        historyList = historyList.slice(0, historyIndex + 1);
-        historyList.push(normalizedForHistory);
-        historyIndex++;
-        updateNavButtons();
-    }
-}
-
-function loadUrlNoHistory(url){
-    // Samma som loadUrl utan att pushHistory
-    if(!url || url === 'home'){ goHome(); return; }
-    const normalized = normalizeUrl(url) || url;
-    currentUrl = normalized;
-    addressBar.value = normalized;
-
-    loadingBar.style.display = 'block';
-    showPage(iframePage);
-    contentFrame.src = normalized;
-
-    let loaded = false;
-    const t = setTimeout(()=>{
-        if(!loaded){
-            showError(normalized, 'Tidsgräns — kunde inte ladda i iframe.');
-        }
-    },5000);
-
-    contentFrame.onload = () => { loaded = true; clearTimeout(t); loadingBar.style.display = 'none'; };
-    contentFrame.onerror = () => { loaded = true; clearTimeout(t); showError(normalized, 'Ett fel uppstod vid laddning i iframe.'); };
-}
-
-function showError(url, message){
-    currentUrl = url;
-    errorText.textContent = message + ' (' + url + ')';
-    loadingBar.style.display = 'none';
-    showPage(errorPage);
-}
-
-/* Gå till adressfältets innehåll (sök eller URL) */
-function goToAddress(){
-    const raw = addressBar.value.trim();
+function navigate(){
+    const raw = document.getElementById('urlInput').value.trim();
     if(!raw) return;
 
-    if(looksLikeSearch(raw)){
-        // Gör en sökning via DuckDuckGo
+    let url;
+    if(/\s/.test(raw) || !raw.includes('.')){
         const q = encodeURIComponent(raw);
-        const searchUrl = 'https://duckduckgo.com/?q=' + q;
-        // Push normalized searchUrl to history
-        historyList = historyList.slice(0, historyIndex + 1);
-        historyList.push(searchUrl);
-        historyIndex++;
-        loadUrl(searchUrl, false); // loadUrl utan pushHistory eftersom vi redan pushat normaliserad sök-URL
-        updateNavButtons();
-        return;
+        url = 'https://duckduckgo.com/?q=' + q;
+    } else {
+        url = fixURL(raw);
     }
 
-    // Annars: försök normalisera URL och ladda
-    const normalized = normalizeUrl(raw);
-    if(!normalized){
-        // fallback — behandla som sök
-        const q = encodeURIComponent(raw);
-        const searchUrl = 'https://duckduckgo.com/?q=' + q;
-        historyList = historyList.slice(0, historyIndex + 1);
-        historyList.push(searchUrl);
-        historyIndex++;
-        loadUrl(searchUrl, false);
-        updateNavButtons();
-        return;
+    document.getElementById('contentFrame').src = url;
+}
+
+function search(){
+    const raw = document.getElementById('urlInput').value.trim();
+    if(!raw) return;
+    const q = encodeURIComponent(raw);
+    document.getElementById('contentFrame').src = 'https://www.bing.com/search?q=' + q; // Bing är mer tolerant för iframe
+}
+
+function openTest(v){
+    document.getElementById('urlInput').value = v;
+    navigate();
+}
+
+document.getElementById('urlInput').addEventListener('keypress', function(e){
+    if(e.key === 'Enter'){
+        navigate();
     }
-
-    // Normal URL: lägg till i historik och ladda
-    loadUrl(normalized, true);
-}
-
-/* Navigation */
-function goHome(){
-    currentUrl = 'home';
-    addressBar.value = '';
-    showPage(homePage);
-    contentFrame.src = '';
-    // push 'home' to history if not already current
-    if(historyList[historyIndex] !== 'home'){
-        historyList = historyList.slice(0, historyIndex + 1);
-        historyList.push('home');
-        historyIndex++;
-        updateNavButtons();
-    }
-}
-
-function goBack(){
-    if(historyIndex > 0){
-        historyIndex--;
-        const url = historyList[historyIndex];
-        if(url === 'home'){
-            goHome();
-        } else {
-            loadUrlNoHistory(url);
-        }
-        updateNavButtons();
-    }
-}
-
-function goForward(){
-    if(historyIndex < historyList.length - 1){
-        historyIndex++;
-        const url = historyList[historyIndex];
-        if(url === 'home'){
-            goHome();
-        } else {
-            loadUrlNoHistory(url);
-        }
-        updateNavButtons();
-    }
-}
-
-function refresh(){
-    if(currentUrl && currentUrl !== 'home'){
-        loadUrl(currentUrl, false);
-    }
-}
-
-function updateNavButtons(){
-    backBtn.disabled = historyIndex <= 0;
-    forwardBtn.disabled = historyIndex >= historyList.length - 1;
-}
-
-/* Init */
-updateNavButtons();
+});
 </script>
+
 </body>
 </html>
