Implement URL loading via Google Translate proxy.html
Added a new function to load URLs via Google Translate as a proxy to bypass iframe restrictions.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,3 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Browser – Embedded iFrame Version</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
-        .topbar { background:#222; padding:10px; display:flex; gap:10px; }
-        input { flex:1; padding:8px; border-radius:6px; border:none; }
-        button { padding:8px 14px; border:none; border-radius:6px; background:#4a90e2; color:white; cursor:pointer; }
-        .samples { padding:12px; display:flex; gap:8px; background:#fff; }
-        .iframe-container { width:100%; height:80vh; margin-top:10px; border:1px solid #ccc; border-radius:6px; overflow:hidden; }
-        iframe { width:100%; height:100%; border:none; }
-    </style>
-</head>
-<body>
-
-<div class="topbar">
-    <input id="urlInput" placeholder="Ange webbadress eller sök...">
-    <button onclick="navigate()">Go</button>
-    <button onclick="search()">Sök</button>
-</div>
-
-<div class="samples">
-    <button onclick="openTest('example.com')">example.com</button>
-    <button onclick="openTest('wikipedia.org')">wikipedia.org</button>
-    <button onclick="openTest('borrelia behandling')">Sök borrelia</button>
-</div>
-
-<div class="iframe-container">
-    <iframe id="contentFrame" src=""></iframe>
-</div>
-
 <script>
 // Funktion för att säkerställa att URL:en har https:// i början
 function fixURL(url){
@@ -43,29 +9,31 @@ function fixURL(url){
 // Funktion för att öppna sökresultat i ett nytt fönster/flik
 function searchInNewTab(query){
     const q = encodeURIComponent(query);
-    // Använd Bing för sökning (kan bytas till Google eller DuckDuckGo)
     const searchUrl = 'https://www.bing.com/search?q=' + q;
-    
-    // Öppnar sökresultatet i en ny flik
     window.open(searchUrl, '_blank');
+}
+
+// NY FUNKTION: Försöker ladda URL:en via Google Translate som en proxy
+function loadViaProxy(targetUrl) {
+    const encodedTarget = encodeURIComponent(targetUrl);
+    // Använd Google Translate som proxy för att försöka kringgå iFrame-begränsningar
+    const proxyUrl = 'https://translate.google.com/translate?sl=auto&tl=sv&u=' + encodedTarget;
+    document.getElementById('contentFrame').src = proxyUrl;
 }
 
 // Huvudnavigeringsfunktion, anropas av "Go" och Enter
 function navigate(){
     const raw = document.getElementById('urlInput').value.trim();
     if(!raw) return;
-
-    let url;
     
-    // Logik: Om inmatningen innehåller mellanslag ELLER saknar punkt (och är kort), antas det vara en sökterm.
+    // Logik: Om sökterm (innehåller mellanslag eller saknar punkt och är kort)
     if(/\s/.test(raw) || (!raw.includes('.') && raw.length > 0 && raw.length < 20)){
-        // Om sökterm, anropa funktionen som öppnar i ny flik
-        searchInNewTab(raw);
+        searchInNewTab(raw); // Öppna sökning i nytt fönster
         return; 
     } else {
-        // Om URL (t.ex. example.com), försök ladda den i iFramen
-        url = fixURL(raw);
-        document.getElementById('contentFrame').src = url;
+        // Om URL (t.ex. google.com), försök ladda den via proxyn
+        const urlToProxy = fixURL(raw);
+        loadViaProxy(urlToProxy);
     }
 }
 
@@ -73,8 +41,7 @@ function navigate(){
 function search(){
     const raw = document.getElementById('urlInput').value.trim();
     if(!raw) return;
-    // Använder alltid nytt fönster för sökning
-    searchInNewTab(raw);
+    searchInNewTab(raw); // Använder alltid nytt fönster för sökning
 }
 
 // Anropas från exempelknapparna
@@ -90,6 +57,3 @@ document.getElementById('urlInput').addEventListener('keypress', function(e){
     }
 });
 </script>
-
-</body>
-</html>
