--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtuell Browser – Ny flik</title>
+    <title>Virtuell Browser – Proxyversion</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
         .topbar { background:#222; padding:10px; display:flex; gap:10px; }
         input { flex:1; padding:8px; border-radius:6px; border:none; }
         button { padding:8px 14px; border:none; border-radius:6px; background:#4a90e2; color:white; cursor:pointer; }
         .samples { padding:12px; display:flex; gap:8px; background:#fff; }
+        .iframe-container { width:100%; height:80vh; margin-top:10px; border:1px solid #ccc; border-radius:6px; overflow:hidden; }
+        iframe { width:100%; height:100%; border:none; }
     </style>
 </head>
 <body>
@@ -17,14 +19,16 @@
 <div class="topbar">
     <input id="urlInput" placeholder="Ange webbadress eller sök...">
     <button onclick="navigate()">Go</button>
-    <button onclick="search()">Sök</button>
 </div>
 
 <div class="samples">
     <button onclick="openTest('karwan.tv')">karwan.tv</button>
     <button onclick="openTest('example.com')">example.com</button>
     <button onclick="openTest('wikipedia.org')">wikipedia.org</button>
-    <button onclick="openTest('borrelia behandling')">Sök borrelia</button>
+</div>
+
+<div class="iframe-container">
+    <iframe id="contentFrame"></iframe>
 </div>
 
 <script>
@@ -38,16 +42,9 @@ function navigate(){
     const raw = document.getElementById('urlInput').value.trim();
     if(!raw) return;
     let url = fixURL(raw);
-    // Öppna alltid i ny flik
-    window.open(url, '_blank');
-}
 
-function search(){
-    const raw = document.getElementById('urlInput').value.trim();
-    if(!raw) return;
-    const q = encodeURIComponent(raw);
-    const searchUrl = 'https://www.bing.com/search?q=' + q;
-    window.open(searchUrl, '_blank');
+    // Ladda via proxyservern
+    document.getElementById('contentFrame').src = 'http://localhost:3000/proxy?url=' + encodeURIComponent(url);
 }
 
 function openTest(v){
