--- a/index.html
+++ b/index.html
@@ -1,69 +1,67 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtuell Browser – Proxyversion</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
-        .topbar { background:#222; padding:10px; display:flex; gap:10px; }
-        input { flex:1; padding:8px; border-radius:6px; border:none; }
-        button { padding:8px 14px; border:none; border-radius:6px; background:#4a90e2; color:white; cursor:pointer; }
-        .samples { padding:12px; display:flex; gap:8px; background:#fff; }
-        .iframe-container { width:100%; height:80vh; margin-top:10px; border:1px solid #ccc; border-radius:6px; overflow:hidden; }
-        iframe { width:100%; height:100%; border:none; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Virtuell Browser – GitHub Pages</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
+    .topbar { background:#222; padding:10px; display:flex; gap:10px; }
+    input { flex:1; padding:8px; border-radius:6px; border:none; }
+    button { padding:8px 14px; border:none; border-radius:6px; background:#4a90e2; color:white; cursor:pointer; }
+    .samples { padding:12px; display:flex; gap:8px; background:#fff; }
+    .iframe-container { width:100%; height:80vh; margin-top:10px; border:1px solid #ccc; border-radius:6px; overflow:hidden; }
+    iframe { width:100%; height:100%; border:none; }
+  </style>
 </head>
 <body>
 
 <div class="topbar">
-    <input id="urlInput" placeholder="Ange webbadress eller sök...">
-    <button onclick="navigate()">Go</button>
+  <input id="urlInput" placeholder="Ange webbadress eller sök...">
+  <button onclick="navigate()">Go</button>
 </div>
 
 <div class="samples">
-    <button onclick="openTest('karwan.tv')">karwan.tv</button>
-    <button onclick="openTest('example.com')">example.com</button>
-    <button onclick="openTest('wikipedia.org')">wikipedia.org</button>
-    <button onclick="openTest('borrelia behandling')">Sök borrelia</button>
+  <button onclick="openTest('https://karwan.tv')">karwan.tv</button>
+  <button onclick="openTest('https://example.com')">example.com</button>
+  <button onclick="openTest('https://wikipedia.org')">wikipedia.org</button>
+  <button onclick="openTest('https://www.bing.com/search?q=borrelia+behandling')">Sök borrelia</button>
 </div>
 
 <div class="iframe-container">
-    <iframe id="contentFrame"></iframe>
+  <iframe id="contentFrame"></iframe>
 </div>
 
 <script>
 function fixURL(url){
-    url = url.trim();
-    if(!/^https?:\/\//i.test(url)) return 'https://' + url;
-    return url;
+  url = url.trim();
+  if(!/^https?:\/\//i.test(url)) return 'https://' + url;
+  return url;
 }
 
 function navigate(){
-    const raw = document.getElementById('urlInput').value.trim();
-    if(!raw) return;
+  const raw = document.getElementById('urlInput').value.trim();
+  if(!raw) return;
 
-    // Om det ser ut som en sökterm (innehåller mellanslag eller saknar punkt)
-    if(/\s/.test(raw) || !raw.includes('.')){
-        const q = encodeURIComponent(raw);
-        const searchUrl = 'https://www.bing.com/search?q=' + q;
-        document.getElementById('contentFrame').src = 'http://localhost:3000/proxy?url=' + encodeURIComponent(searchUrl);
-    } else {
-        // Annars behandla som URL
-        let url = fixURL(raw);
-        document.getElementById('contentFrame').src = 'http://localhost:3000/proxy?url=' + encodeURIComponent(url);
-    }
+  if(/\s/.test(raw) || !raw.includes('.')){
+    const q = encodeURIComponent(raw);
+    const searchUrl = 'https://www.bing.com/search?q=' + q;
+    document.getElementById('contentFrame').src = searchUrl;
+  } else {
+    let url = fixURL(raw);
+    document.getElementById('contentFrame').src = url;
+  }
 }
 
 function openTest(v){
-    document.getElementById('urlInput').value = v;
-    navigate();
+  document.getElementById('urlInput').value = v;
+  navigate();
 }
 
 document.getElementById('urlInput').addEventListener('keypress', function(e){
-    if(e.key === 'Enter'){
-        navigate();
-    }
+  if(e.key === 'Enter'){
+    navigate();
+  }
 });
 </script>
 
