Update Vercel proxy URL in index.html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 </div>
 
 <script>
-// Byt ut denna URL mot den du fick från Vercel:
-const PROXY_BASE = 'https://virtual-browser-kuribaxi.vercel.app/api/proxy?url=';
+// ✅ Din Vercel-proxy är live här:
+const PROXY_BASE = 'https://virtual-browser-ctq2ot7h4-kuribaxis-projects.vercel.app/api/proxy?url=';
 
 function fixURL(url){
   url = url.trim();
